--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@eslint/js": "^9.34.0",
-    "@stylistic/eslint-plugin": "^5.2.3",
-    "eslint": "^9.34.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.41.0",
-    "vite": "^7.1.3",
+    "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.5.0",
+    "eslint": "^9.39.1",
+    "rollup": "^4.53.2",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.2",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-singlefile": "^2.3.0"
   }
