--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.6.1",
     "eslint": "^9.39.2",
+    "globals": "^17.3.0",
     "rollup": "^4.53.3",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.55.0",
